# agentic-fix

fix-agentic/: intro2  introduction.md  spec.md
fix-agentic/home-fix-agent/: Dockerfile  README.md  fly.toml  pyproject.toml
fix-agentic/home-fix-agent/configs/: categories.yaml  ranking.yaml
fix-agentic/home-fix-agent/data/sessions/31327fa23afb/: result.json
fix-agentic/home-fix-agent/data/sessions/bd6b74b586ac/: result.json
fix-agentic/home-fix-agent/home_fix_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fix-agentic/home-fix-agent/prompts/: spec_extractor.md  vision_analyst.md
fix-agentic/home-fix-agent/src/: main.py  web.py
fix-agentic/home-fix-agent/src/agents/: order_manager.py  product_ranker.py  product_searcher.py  spec_extractor.py  vision_analyst.py
fix-agentic/home-fix-agent/src/intake/: photo.py
fix-agentic/home-fix-agent/src/models/: schemas.py
fix-agentic/home-fix-agent/src/storage/: store.py
fix-agentic/home-fix-agent/src/utils/: config.py  llm.py
fix-agentic/home-fix-agent/static/: index.html
fix-agentic/home-fix-agent/tests/fixtures/: mock_search_results.json
fix-agentic/home-fix-agent/tests/unit/: test_pipeline.py
